--- a/src/styles/RoadmapPage.css
+++ b/src/styles/RoadmapPage.css
@@ -4,7 +4,7 @@
 }
 
 .roadmap-content {
-  margin-left: 280px;
+  margin-left: 64px;
   padding: 40px 20px;
 }
 
